--- a/.github/workflows/Build-KernelSU-Next-SUSFS.yml
+++ b/.github/workflows/Build-KernelSU-Next-SUSFS.yml
@@ -32,7 +32,7 @@ jobs:
         uses: easimon/maximize-build-space@master
         with:
           root-reserve-mb: 8192
-          temp-reserve-mb: 2048
+          temp-reserve-mb: 8192
           swap-size-mb: 8192
           remove-dotnet: 'true'
           remove-android: 'true'
@@ -112,7 +112,15 @@ jobs:
            
            cp ../kernel_patches/selinux.c_fix.patch ./
            patch -p1 -F 3 < selinux.c_fix.patch
-           
+
+      # Here, add the step to change the linker flags and increase stack size
+      - name: Increase Stack Size Limit
+        run: |
+         echo "Changing stack size limit..."
+         echo "ulimit -s unlimited" >> ~/.bashrc
+         echo "export LDFLAGS='-Wl,-z,stack-size=4096'" >> ~/.bashrc
+         source ~/.bashrc
+
       - name: Build kernel
         run: |
          cd kernel_workspace
